letter spacing fix on heading
git-svn-id: https://digressit.googlecode.com/svn/trunk@245 b80beb6a-a484-11de-b98f-4500b42dc123

--- a/themes/digressit-default/style.css
+++ b/themes/digressit-default/style.css
@@ -664,7 +664,7 @@ p, li{
 	padding:15px 10px 0 20px;
 	position:relative;
 	line-height: 1.22em;
-	letter-spacing:0.07em;
+	letter-spacing:0.05em;
 }
 
 .site-title a{
